manifests/k8s/ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-controller
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: kubernetes.docker.internal
    http:
      paths:
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: zakaa-auth-service
            port:
              number: 3001
      - path: /api/user
        pathType: Prefix
        backend:
          service:
            name: zakaa-user-service
            port:
              number: 3002
      - path: /api/notification
        pathType: Prefix
        backend:
          service:
            name: zakaa-notification-service
            port:
              number: 3003
      - path: /api/course
        pathType: Prefix
        backend:
          service:
            name: zakaa-course-service
            port:
              number: 3004
      - path: /api/payment
        pathType: Prefix
        backend:
          service:
            name: zakaa-payment-service
            port:
              number: 3005
      - path: /api/chat
        pathType: Prefix
        backend:
          service:
            name: zakaa-chat-service
            port:
              number: 3006
